--- a/signup.html
+++ b/signup.html
@@ -44,7 +44,7 @@
             <input type="checkbox" value="remember-me"> Remember me
         </label>
         </div>
-        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign Up</button>
     </form>
     </main>
 
